# qt

./: .gitignore
Builds/Arm64-v8a/Debug/.qt/: QtDeploySupport.cmake
Builds/Arm64-v8a/Debug/.qtc_clangd/: compile_commands.json
Builds/Arm64-v8a/Debug/.rcc/: appReAmped_raw_qml_0.qrc  qmake_ReAmped.qrc
Builds/Arm64-v8a/Debug/.rcc/qmlcache/: appReAmped_qml_loader_file_list.rsp
Builds/Arm64-v8a/Release/: .ninja_deps  .ninja_log
Builds/Arm64-v8a/Release/.qt/: QtDeploySupport.cmake
Builds/Arm64-v8a/Release/.qtc_clangd/: compile_commands.json
Builds/Arm64-v8a/Release/.rcc/: qmake_ReAmped.qrc  qrc_ReAmped_raw_qml_0.cpp  qrc_qmake_ReAmped.cpp  qrc_qml.cpp
Builds/Arm64-v8a/Release/.rcc/qmlcache/: ReAmped_RButton_qml.cpp  ReAmped_qmlcache_loader.cpp
Builds/PC_clangx86_64/Debug/: .ninja_deps  .ninja_log
Builds/PC_clangx86_64/Debug/.qt/: QtDeploySupport.cmake
Builds/PC_clangx86_64/Debug/.qtc_clangd/: compile_commands.json
Builds/PC_clangx86_64/Debug/.rcc/: qmake_ReAmped.qrc  qml.qrc  qrc_appReAmped_raw_qml_0.cpp  qrc_qmake_ReAmped.cpp
Builds/PC_clangx86_64/Debug/.rcc/qmlcache/: appReAmped_Main_qml.cpp  appReAmped_qmlcache_loader.cpp
Builds/PC_clangx86_64/Release/: .ninja_deps  .ninja_log
Builds/PC_clangx86_64/Release/.qt/: QtDeploySupport.cmake
Builds/PC_clangx86_64/Release/.qtc_clangd/: compile_commands.json
Builds/PC_clangx86_64/Release/.rcc/: ReAmped_raw_qml_0.qrc  appReAmped_raw_qml_0.qrc  qmake_ReAmped.qrc  qrc_ReAmped_raw_qml_0.cpp  qrc_appReAmped_raw_qml_0.cpp  qrc_qmake_ReAmped.cpp
Builds/PC_clangx86_64/Release/.rcc/qmlcache/: ReAmped_App_qml.cpp  ReAmped_BluetoothAlarmDialog_qml.cpp  ReAmped_BottomLine_qml.cpp  ReAmped_Connect_qml.cpp  ReAmped_GameButton_qml.cpp  ReAmped_GamePage_qml.cpp  ReAmped_Main_qml.cpp  ReAmped_Measure_qml.cpp  (+9 more)
ReAmped/: App.qml  BottomLine.qml  CMakeLists.txt  Connect.qml  Main.qml  Measure.qml  RButton.qml  SplashScreen.qml  Stats.qml  bluetoothbaseclass.cpp  bluetoothbaseclass.h  connectionhandler.cpp  connectionhandler.h  devicefinder.cpp  devicefinder.h  devicehandler.cpp  devicehandler.h  deviceinfo.cpp  deviceinfo.h  heartrate-game.pro  heartrate-global.h  main.cpp  qmldir
ReAmped/doc/src/: heartrate-game.qdoc
Snake-qml/: main.cpp  main.qml
ULC/: ApplicationFlow.qml  ApplicationFlowForm.qml  ApplicationWindow.qml  ArduinoUNOCode.ino  CMakeLists.txt  CmdButton.qml  Main.qml  README.md  SerialSettings.qml  SideBar.qml  SideBarForm.qml  USwitch.qml  main.cpp  serialcommunication.cpp  serialcommunication.h
androidTest/: CMakeLists.txt  Main.qml  RButton.qml  main.cpp
androidTest/android/: AndroidManifest.xml
applets/com.github.bad63r.myFirstPlasmoid/: metadata.json
applets/com.github.bad63r.myFirstPlasmoid/contents/ui/: main.qml
applets/com.github.bad63r.taskManagerCustom/: metadata.json
applets/com.github.bad63r.taskManagerCustom/contents/ui/: Task.qml
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  reamped_qmltyperegistrations.cpp
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/.qt/deploy_qml_imports/: ReAmped.cmake
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_ReAmped.cmake  Qt6_QmlPlugins_Imports_ReAmped.rsp
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/.rcc/: ReAmped_raw_qml_0.qrc  qmake_HeartRateGame.qrc  qrc_ReAmped_raw_qml_0.cpp  qrc_qmake_HeartRateGame.cpp
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/.rcc/qmlcache/: ReAmped_App_qml.cpp  ReAmped_BluetoothAlarmDialog_qml.cpp  ReAmped_BottomLine_qml.cpp  ReAmped_Connect_qml.cpp  ReAmped_GameButton_qml.cpp  ReAmped_GamePage_qml.cpp  ReAmped_Main_qml.cpp  ReAmped_Measure_qml.cpp  ReAmped_RButton_qml.cpp  ReAmped_ReAmpedSettings_qml.cpp  ReAmped_SplashScreen_qml.cpp  ReAmped_StatsLabel_qml.cpp  ReAmped_Stats_qml.cpp  ReAmped_TitleBar_qml.cpp  ReAmped_qml_loader_file_list.rsp  ReAmped_qmlcache_loader.cpp
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/HeartRateGame/: BluetoothAlarmDialog.qml  GameButton.qml  GamePage.qml  Main.qml  Measure.qml  ReAmped.qmltypes  ReAmpedSettings.qml  ReAmped_qml_module_dir_map.qrc  SplashScreen.qml  Stats.qml  StatsLabel.qml  TitleBar.qml  qmldir
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/ReAmped_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/ReAmped_autogen/EWIEGA46WW/: moc_bluetoothbaseclass.cpp  moc_bluetoothbaseclass.cpp.d  moc_bluetoothbaseclass.cpp.json  moc_connectionhandler.cpp  moc_connectionhandler.cpp.d  moc_connectionhandler.cpp.json  moc_devicefinder.cpp  moc_devicefinder.cpp.d  moc_devicefinder.cpp.json  moc_devicehandler.cpp  moc_devicehandler.cpp.d  moc_devicehandler.cpp.json  moc_deviceinfo.cpp  moc_deviceinfo.cpp.d  moc_deviceinfo.cpp.json
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/meta_types/: ReAmped_json_file_list.txt  ReAmped_json_file_list.txt.timestamp  qt6reamped_debug_metatypes.json.gen
build-heartrate-game-Desktop_Qt_6_5_3_GCC_64bit-Debug/qmltypes/: ReAmped_foreign_types.txt
simpleAPK/build-simpleAPK-Desktop-Debug/: Makefile  moc_quewindow.cpp  moc_secwindow.cpp  moc_testdialog.cpp  moc_window.cpp  simpleAPK  ui_quewindow.h  ui_secwindow.h  ui_testdialog.h  ui_window.h
simpleAPK/build-simpleAPK-Desktop_Qt_6_5_3_GCC_64bit-Debug/: Makefile  moc_quewindow.cpp  moc_testdialog.cpp  moc_window.cpp  ui_quewindow.h  ui_testdialog.h  ui_window.h
simpleAPK/build-simpleAPK-Desktop_Qt_6_5_3_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
simpleAPK/simpleAPK/: dbmanager.cpp  dbmanager.h  main.cpp  quewindow.cpp  quewindow.h  quewindow.ui  secwindow.cpp  simpleAPK.pro  src.qrc  testdialog.cpp  testdialog.h  testdialog.ui  window.cpp  window.h  window.ui
simpleAPK/simpleAPK/database/: scoreboard.db
simpleAPK/simpleAPK/sources/: questions_list.txt
(+1399 files in other folders)
